# mts-true-tech-2026-certified-turtles

./: .dockerignore  .env.example  .gitignore  .webui_secret_key  CLAUDE.md  Dockerfile  FUSION-API.yaml  MWS-GPT.md  README.md  ROUTING-ANALYSIS-PROMPT.md  WikiLive шаблон фич.xlsx  agentdb.rvf  dev.sh  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  task.md  test.py
.claude-flow/: CAPABILITIES.md  config.yaml
.playwright-mcp/: page-2026-04-10T23-24-11-363Z.yml
.swarm/: memory.db-wal  state.json
backend/: __init__.py
benchmarks/: .gitignore  BENCHMARKS.md  aggregate_results.py  models.txt  parse_benchmarks.py  requirements.txt  run_benchmarks.sh  run_local_benchmarks.py  run_parallel.sh  run_production.sh
claude-code/: build.mjs  package.json  tsconfig.json
claude-how-it-works/: api-client-and-state.md  bridge-system.md  claude-file-system.md  ink-terminal-engine.md  mcp-integration.md  memory-architecture.md  permissions-system.md  plugins-and-skills.md  query-engine.md  swarm-and-analytics.md
docs/: FUSION-API-GUIDE.md  PROMPT-MEMORY-REWORK.md  architecture.md  gpthub-cloud-code-spec.md  openwebui-ux.md  tools-and-improvements.md
figma-plugin/: .env.example  .gitignore
functions/: gpthub_memory_extractor.py  gpthub_memory_injector.py
mws_gpt/: __init__.py  __main__.py  client.py
open-webui/: Dockerfile
scripts/: bootstrap_gpt_researcher_venv.sh  gpt_researcher_worker.py  inject-memory-toast.sh
tests/: test_agent_loop.py  test_agent_openwebui_rag_e2e.py  test_api_manager_integration.py  test_chat_modes.py  test_claude_like_file_tools.py  test_concurrency_races.py  test_e2e_memory_flow.py  test_execute_python_intent.py  test_new_tools.py  (+22 more)
(+145 files in other folders)
